@@ -1,3 +1,13 @@
+2008-08-04  Veerapuram Varadhan <vvaradhan@novell.com>
+
+	** Part of fix for bug #467586
+
+	* camel/camel-exchange-store.c: (exchange_rename_folder),
+	(stub_notification):
+	* mail/mail-stub-exchange.c: (get_folder_info_data),
+	(get_folder_info), (rename_folder): Get the folder hierarchy once 
+	renamed.
+
 2008-08-04  Bharath Acharya  <abharath@novell.com>
 
 	** Part of fix for bug #543427
